environments/yourinfo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yourinfo-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - yourinfo.smileshosting.com
    secretName: yourinfo-tls
  rules:
  - host: yourinfo.smileshosting.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: yourinfo
            port:
              number: 80
